# CourseProject

./: .env.example  README.md  pyproject.toml
client/: addWork.html  admin.html  dashboard.html  editProfile.html  index.html  login.html  moderation.html  register.html  viewWork.html
server/: config.py  models.py  server.py
server/api/: api_implementation.py
server/database/: db_con.py
uploads/submissions/: submission_20250608_052855_1.docx
uploads/works/: 20250604_085949_1.docx  20250604_091445_1.docx  submission_20250609_133107_1.docx  submission_20250616_024144_1.docx
